@@ -5,7 +5,7 @@
     <parent>
         <artifactId>mule-modules</artifactId>
         <groupId>org.mule.runtime</groupId>
-        <version>4.8.0-SNAPSHOT</version>
+        <version>4.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,6 +17,7 @@
         <surefire.args>
             -XX:+IgnoreUnrecognizedVMOptions
               --add-reads=org.mule.runtime.extensions.soap.support=org.apache.commons.io
+              --add-reads=org.mule.runtime.extensions.soap.support=org.mule.runtime.manifest
             ${surefire.args.base}
         </surefire.args>
 
